Hide partially visible events in gridlist view, and make sure there's some free space to click so user can add events

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -637,6 +637,13 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
 .calendar_calTimeGridList .calendar_calDayColHeader > div[data-date] {
 	border: none;
 }
+.calendar_calTimeGridList .calendar_calDayCol > div:first-child
+{
+	position: absolute;
+	top: 0px;
+	bottom: 3em;
+	width: 100%;
+}
 .calendar_calTimeGridList .calendar_calEvent {
     height: 1.1em;
     position: relative;
@@ -689,11 +696,11 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
 .calendar_calTimeGridList .calendar_calDayCol .hiddenEventAfter:before {
     content: attr(data-hidden_label);
 	display:block;
-    width: 100%;
 	height: 100%;
 	min-height: 3ex;
     background: white;
     z-index: 21;
+	padding-left: 12px;
 }
 .calendar_calTimeGridList .calendar_calDayCol .hiddenEventAfter:hover {
 	/* Need !important to override calculated height*/
